version/0.40/_sources/api/solver/_autosummary/settings/radiator.rst.txt
:orphan:

.. _radiator:

radiator
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.radiator
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`create <create_6>`                                           Crate new boundary.

:ref:`delete <delete>`                                        Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list_1>`                                    List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`radiator_child <radiator_child>`


.. rubric:: Included in:

==============================   ===================================================

Parent                                                                       Summary

==============================   ===================================================
:ref:`boundaries <boundaries>`       Defines physics boundaries for a volume region.

==============================   ===================================================

